# fake-smtpd

./: .gitignore  Cargo.toml  Makefile  README.md
src/: main.rs  proto.rs
src/proto/: command.rs  mod.rs  state.rs
src/proto/reply/: mod.rs
