[package]
name = "fake-smtpd"
version = "0.1.0"
authors = ["Konstantin Sorokin <kvs@sigterm.ru>"]
description = "Fake SMTP server"
edition = "2018"

[dependencies]
clap = "2.33.0"
log = "0.4.8"
env_logger = "0.7.1"
failure = "0.1.8"
threadpool = "1.8.0"
regex = "1.3.7"
lazy_static = "1.4.0"
rand = "0.7.3"
ctrlc = "3.1.4"
net2 = "0.2.34"

[profile.release]
lto = true
