[package]
name = "fake-smtpd"
version = "0.1.0"
authors = ["Konstantin Sorokin <kvs@sigterm.ru>"]
description = "Fake SMTP server"
edition = "2018"

[dependencies]
clap = "2.33.3"
log = "0.4.11"
env_logger = "0.7.1"
threadpool = "1.8.1"
regex = "1.3.9"
lazy_static = "1.4.0"
rand = "0.7.3"
ctrlc = "3.1.6"
net2 = "0.2.34"
anyhow = "1.0.68"

[profile.release]
lto = true
