[package]
name = "fake-smtpd"
version = "0.1.0"
authors = ["Konstantin Sorokin <kvs@sigterm.ru>"]
description = "Fake SMTP server"
edition = "2018"

[dependencies]
clap = "2.34.0"
log = "0.4.17"
env_logger = "0.7.1"
threadpool = "1.8.1"
regex = "1.7.1"
lazy_static = "1.4.0"
rand = "0.7.3"
ctrlc = "3.2.4"
net2 = "0.2.38"
anyhow = "1.0.68"

[profile.release]
lto = true
